# predictasearch-python

./: .dockerignore  .pre-commit-config.yaml  CHANGES.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
predictasearch/: __api.py  __cli.py  __init__.py  __lib.py  _app.py  _lib.py
tests/: test_api.py
